# gitbook

A.2-FPGA based Visual Capture Device/: A2_FFPGA_VCD_Abstract.docx  A2_FFPGA_VCD_Guideline_Installation.docx  CMakeLists.txt  FPGA_VCD_Climatic_Chamber_Test_Results.xlsx  README.md
B-Decentralized Network (DLT)/: B_DLT_Abstract.docx
B-Decentralized Network (DLT)/deepshield-blockchain-main/: README.md
B-Decentralized Network (DLT)/deepshieldlibrary-main/: README.md
C-Multi-Layered Content Integrity Verification/deepshield_semantic_integrity/: README.md  README_API_docs.md  client_mock.py  pending_requests.txt  server_mock.py  updated semantic integrity.postman_collection.json
C-Multi-Layered Content Integrity Verification/deepshield_watermark/: README.md  demo.ipynb  demo_script.py  main.py  pyproject.toml
C-Multi-Layered Content Integrity Verification/deepshield_watermark/demo/: demo_utils.py  secublox.py  semantic_integrity.py
C-Multi-Layered Content Integrity Verification/deepshield_watermark/watermarking/generator/: base.py  sha256.py
C-Multi-Layered Content Integrity Verification/deepshield_watermark/watermarking/positions/: base.py  sha256.py
C-Multi-Layered Content Integrity Verification/deepshield_watermark/watermarking/strategies/: base.py  dwt_dct.py
C-Multi-Layered Content Integrity Verification/deepshield_watermark/watermarking/utils/: key_manager.py  preprocess.py  watermark_encode_decode.py  zigzag.py
D-DeepShield-Management-Integration/: D_Platform_MI_Abstract.docx
D-DeepShield-Management-Integration/deepshield-backend-main/: README.md
D-DeepShield-Management-Integration/deepshield-frontend-main/: README.md
